--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
+*{
+    box-sizing: border-box;
+}
+html,
 body {
+    padding: 0;
+    margin: 0;
     font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
 }
